--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 
 {
   "name": "react-native-navybits-date-time-picker",
-  "version": "1.2.3.2",
+  "version": "1.2.3-beta.1",
   "description": "",
   "main": "index.js",
   "scripts": {
